week4 | merge week3

--- a/week4-riter/css/style.css
+++ b/week4-riter/css/style.css
@@ -634,7 +634,7 @@ a:hover {
 .carousel {
   padding: 5px;
   width: 100%;
-  background-image: url(/week3/img/carousel.png);
+  background-image: url(/week4-riter/img/carousel.png);
   background-repeat: repeat-x;
   background-size: 110%;
   background-position: center;
