--- a/week5 - SOM/scss/main.scss
+++ b/week5 - SOM/scss/main.scss
@@ -3,12 +3,17 @@
   margin-left: auto;
   margin-right: auto;
 }
-@media (min-width: 576px) {
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .container {
     max-width: 540px;
   }
   .block-wrapper .container {
     display: block;
+  }
+  .slider-wrapper {
+    overflow: hidden;
+    max-width: 100%;
   }
   .about {
     flex-wrap: wrap;
@@ -19,30 +24,22 @@
   .footer {
     flex-wrap: wrap;
   }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
+  .about-img {
+    max-width: 16%;
   }
-
   .back,
   .next {
     display: none;
   }
+}
 
-  .swiper-container {
-    width: 70%;
-  }
-  .footer {
-    flex-wrap: nowrap;
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
+  .block-wrapper .container {
+    display: flex;
   }
 }
 
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
+@media (min-width: 576px) {
 }
 
 @media (min-width: 1200px) {
@@ -55,8 +52,13 @@
 }
 
 a {
+  cursor: pointer;
   text-decoration: none;
   transition: 0.2s;
+
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 .button {
@@ -71,15 +73,27 @@ a {
   font-size: 14px;
   cursor: pointer;
   padding: 0 20px;
+  transition: 0.2s;
 }
 
 .red_button {
   background-color: var(--red1);
+
+  &:hover {
+    background-color: var(--yellow);
+
+    color: black;
+  }
 }
 
 .border_transparent_button {
   background-color: transparent;
   border: 3px solid #ffffff;
+
+  &:hover {
+    background-color: white;
+    color: black;
+  }
 }
 
 .dropdown {
@@ -210,11 +224,19 @@ a {
   &__icon {
     display: flex;
     position: relative;
+    align-items: center;
     .icon {
       &_cart,
       &_profile {
         display: flex;
         margin: 20px;
+
+        img {
+          &:hover {
+            opacity: 0.7;
+            cursor: pointer;
+          }
+        }
       }
     }
 
@@ -222,6 +244,7 @@ a {
       width: 200px;
       max-height: 215px;
       overflow-y: scroll;
+      z-index: 1;
 
       &::-webkit-scrollbar {
         width: 5px;
@@ -286,6 +309,7 @@ a {
       padding: 20px 0;
 
       &:hover {
+        opacity: 1;
         color: var(--blue1);
         border-bottom: 3px solid var(--blue1);
       }
@@ -596,6 +620,10 @@ a {
 
   &__item {
     fill: var(--gray3);
+
+    &:hover {
+      fill: #dbdbdb;
+    }
   }
 }
 
