--- a/week6 - SOM/src/html/include/menu-dropdown.pug
+++ b/week6 - SOM/src/html/include/menu-dropdown.pug
@@ -3,25 +3,25 @@
         .menu-dropdown__item
             ul.menu-dropdown__item-list
                 li 
-                    a(href="").font_400 All
+                    a.font_400 All
                 li 
-                    a(href="").font_400 Party supplies 
+                    a.font_400 Party supplies 
                 li 
-                    a(href="").font_400 Invitations and cards 
+                    a.font_400 Invitations and cards 
                     ul.list-2
                         li
-                            a(href="").font_400 Party decor
+                            a.font_400 Party decor
                         li
-                            a(href="").font_400 Baking and decorating cakes 
+                            a.font_400 Baking and decorating cakes 
                         li
-                            a(href="").font_400 Clothes
+                            a.font_400 Clothes
                 li 
-                    a(href="").font_400 Wedding decor 
+                    a.font_400 Wedding decor 
                 li 
-                    a(href="").font_400 Wedding gift 
+                    a.font_400 Wedding gift 
                 li 
-                    a(href="").font_400 Wedding accessories 
+                    a.font_400 Wedding accessories 
                 li 
-                    a(href="").font_400 Wedding jewerly 
+                    a.font_400 Wedding jewerly 
                 li 
-                    a(href="").font_400 Wedding clothes 
+                    a.font_400 Wedding clothes 
