--- a/week6 - SOM/src/styles/blocks/price-checkbox.scss
+++ b/week6 - SOM/src/styles/blocks/price-checkbox.scss
@@ -3,9 +3,18 @@
 }
 
 .price-checkbox {
-  &__item:last-child {
+  &__item:nth-last-child(2) {
     border-bottom: 1px solid #e1e0e0;
     padding-bottom: 30px;
+  }
+
+  &__item:last-child {
+    padding: 30px 0px;
+    & label {
+      &::before {
+        border-radius: 3px;
+      }
+    }
   }
   &__item {
     padding: 12px 0px;
@@ -14,7 +23,8 @@
       font-weight: 600;
     }
 
-    & input[type="radio"] {
+    & input[type="radio"],
+    & input[type="checkbox"] {
       display: none;
 
       &:checked {
@@ -48,6 +58,11 @@
       }
     }
     & input[type="radio"]:checked ~ label::before {
+      background: url(../build/img/check-input.svg) no-repeat;
+      background-position: 50% 42%;
+      border: 2px solid $blue1;
+    }
+    & input[type="checkbox"]:checked ~ label::before {
       background: url(../build/img/check-input.svg) no-repeat;
       background-position: 50% 42%;
       border: 2px solid $blue1;
